tests/snapshots/test_dot__debug_formatting.snap
---
source: tests/test_dot.rs
expression: "Dot::new(&graph)"
---
digraph petgraph {
    N0[label=""];
    N0 -> N0[label=""];
}

