tests/snapshots/test_dot__graph.snap
---
source: tests/test_dot.rs
expression: "Dot::new(&graph)"
---
digraph petgraph {
    N0[label=""];
    N1[label=""];
    N0 -> N0[label=""];
    N0 -> N1[label=""];
    N1 -> N0[label=""];
}

